crates/analyzer/tests/snapshots/errors__circular_dependency_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No function `create` exists on type `Foo`
  ┌─ compile_errors/circular_dependency_create.fe:5:28
  │
5 │         let foo: Foo = Foo.create(ctx, 0)
  │                            ^^^^^^ undefined function


